@@ -16,6 +16,7 @@
     * Remove Net::SSLeay::SSL_CTX#set_session_id_context method.
     * Remove Net::SSLeay::Callback::TlsextTicketKey class.
     * Remove Net::SSLeay::Callback::TlsextStatus class.
+    * Remove Net::SSLeay::Callback::RemoveSession class.
     
 0.026 2024-12-11
   [Incompatibe Changes]
